Setup bot (#2)
* add dependencies and ci

* setup JDA and JDA-Commands

* Adress review comments

* Add license

* Update gradle wrapper

---------

Co-authored-by: Nora <46890129+RainbowDashLabs@users.noreply.github.com>